package com.acme.payments.domain;

import java.util.List;

public interface Employee {

    String getName();

    List<WorkEvent> getWorkSchedule();
}
